# bigdata

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  meteorology_reference.md
docs/labs/: lab01_guide.md  lab01_setup_io.md  lab02_guide.md  lab02_instructions.md  lab03_guide.md  lab03_instructions.md  lab04_guide.md  lab04_instructions.md  lab05_guide.md  lab05_instructions.md  lab06_guide.md  lab06_instructions.md  lab07_guide.md  lab07_instructions.md  lab08_guide.md  lab08_instructions.md  lab09_gfs_example.md  lab09_guide.md  lab09_instructions.md  lab10_guide.md  lab10_instructions.md
docs/practicas/: p1-setup-io.md
notebooks/: lab01_setup_io.ipynb  lab02_complexity.ipynb  lab02_complexity_dataflow.ipynb  lab03_data_types.ipynb  lab03_data_types_formats.ipynb  lab04_formats_vectorization.ipynb  lab04_vectorization_out_of_core.ipynb  lab05_outofcore_parallel.ipynb  lab05_workers.py  lab06_outofcore_parallel.ipynb  p1_setup_io_benchmark.ipynb
practicas/p1-setup-io/: index.html
search/: search_index.json
src/: generate_csv.py  io_benchmark.py  lab06.py  lab07.py  lab07_polars.py  lab08.py  lab10.py  naive_loading.py  utils.py
src/scripts/: download_gfs_nomads.py  list_gfs_s3.py  plot_gfs_ecmwf_grids.py  plot_lorenz_error_growth.py  process_gfs_dask.py  visualize_gfs.py
tests/: test_io_benchmark.py  test_lab06.py  test_lab07.py  test_lab07_polars.py  test_lab08.py  test_lab10.py
