[project]
name = "bigdata"
version = "0.1.0"
description = "Big Data Exercises for UNIE - Practice 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "jupyter>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0"
]