[project]
name = "bigdata"
version = "0.1.0"
description = "Big Data Exercises"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "jupyter>=1.0.0",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = [
    "click==8.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]
