[project]
name = "bigdata"
version = "0.9.0"
description = "Big Data Course Labs"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "jupyter>=1.0.0",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ipykernel>=7.1.0",
    "pylance>=1.0.3",
    "polars>=1.0.0",
    "pysuricata[polars]",
    "scipy>=1.12.0",
]

[dependency-groups]
dev = [
    "click==8.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pytest>=8.0.0",
]

lab02 = [
    "py-spy>=0.3.14",
    "line-profiler>=4.1.2",
]

lab09 = [
    "cfgrib>=0.9",
    "eccodes>=1.6",
    "s3fs>=2024.1",
    "cartopy>=0.23",
    "matplotlib>=3.7",
    "dask>=2026.3.0",
    "xarray>=2026.2.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
